--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -24,6 +24,11 @@ jobs:
 
     - name: Install dependencies
       run: npm install -g pm2
+
+    - name: Add graphics-drivers PPA
+      run: |
+          sudo add-apt-repository -y ppa:graphics-drivers/ppa
+          sudo apt-get update
       
     - name: Install ffmpeg
       run: sudo apt-get install -y ffmpeg && sudo apt-get install -y webpmux && go get -u all
