--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -25,10 +25,11 @@ jobs:
     - name: Install dependencies
       run: npm install -g pm2
 
-    - name: Add graphics-drivers PPA
+    - name: Add Focal repository
       run: |
-          sudo add-apt-repository -y ppa:graphics-drivers/ppa
-          sudo apt-get update
+        sudo tee /etc/apt/sources.list.d/focal.list <<EOF
+        deb http://archive.ubuntu.com/ubuntu/ focal main restricted universe multiverse
+        EOF
       
     - name: Install ffmpeg
       run: sudo apt-get install -y ffmpeg && sudo apt-get install -y webpmux && go get -u all
