--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -23,16 +23,10 @@ jobs:
         go-version: '1.20'
 
     - name: Install dependencies
-      run: npm install -g pm2
-
-    - name: Add Focal repository
-      run: |
-        sudo tee /etc/apt/sources.list.d/focal.list <<EOF
-        deb http://archive.ubuntu.com/ubuntu/ focal main restricted universe multiverse
-        EOF
-      
+      run: npm install -g pm2 && npm install webpmux
+   
     - name: Install ffmpeg
-      run: sudo apt-get install -y ffmpeg && sudo apt-get install -y webpmux && go get -u all
+      run: sudo apt-get install -y ffmpeg && go get -u all
       
     - name: Build
       run: go build -v ./...
