--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -23,7 +23,9 @@ jobs:
         go-version: '1.20'
 
     - name: Install dependencies
-      run: npm install -g pm2 && npm install webpmux
+      run: |
+          npm install -g pm2
+          npm install webpmux
    
     - name: Install ffmpeg
       run: sudo apt-get install -y ffmpeg && go get -u all
