--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -32,5 +32,6 @@ jobs:
       run: go build -v ./...
         
     - name: Test
-      run: pm2 start "go run ." --watch ".go" --watch "/.go" --watch "//.go" && pm2 log ./...
+      run: pm2 start 'go run main.go' --attach
+      #pm2 start "go run ." --watch ".go" --watch "/.go" --watch "//.go" && pm2 log ./...
       
